Don't crash if opening a file the second time when the first try failed.

BUG: 141110

svn path=/branches/KDE/3.5/kdewebdev/kommander/; revision=722079